# text-game-benchmark

./: AGENTS.md  pyproject.toml
rubrics/: causality.yaml  consent.yaml  contrivance.yaml  npc_autonomy.yaml  pacing.yaml  privacy_awareness.yaml  proportionality.yaml  register_sustain.yaml  repetitiveness.yaml  strategic_disclosure.yaml  subplot_followthrough.yaml  voice.yaml
scenarios/: _template.yaml  alice_basic.yaml  alice_movement.yaml  alice_no_sms.yaml  alice_npc.yaml  alice_refusal.yaml  alice_subplot.yaml  autobiography_delta.yaml  disclosure_reveal.yaml  disclosure_withhold.yaml  inline_sms_tool_calls.yaml  location_story_progression.yaml  memory_search_store.yaml  modern_sms_privacy.yaml  multiplayer_co_located.yaml  noir_custom.yaml  noir_multiplayer_privacy.yaml  noir_sms.yaml  noir_timer.yaml  npc_creation_gender.yaml  register_sustain.yaml
src/tgb/: __init__.py  __main__.py  cli.py  config.py  judge.py  prompt_builder.py  response_parser.py  results.py  rubric.py  (+2 more)
tests/: test_autobiography_checks.py  test_checks.py  test_cli.py  test_config.py  test_coverage_gaps.py  test_judge.py  test_lcd_checks.py  test_memory_checks.py  test_multiplayer_checks.py  test_new_checks.py  test_parser_state_calendar.py  test_privacy.py  test_prompt_builder.py  test_register_sustain.py  test_registry.py  test_response_parser.py  test_results_rubric.py  test_rubric.py  test_runner.py  test_scene_mechanics.py  test_similarity.py  test_sms_attentive_tools.py  test_sms_checks.py  test_sms_read_list_checks.py  test_state_npc_tool.py  test_subplot.py  test_timer_checks.py
(+24 files in other folders)
